# cpp_pythonic

./: .cursorrules  .gitignore  CMakeLists.txt  LICENSE  README.md
.cursor/rules/: architecture.mdc
docs/: bigint_design.md  coding_style.md  how_to_build_and_test.md  intro_plan.md  pyc_template.hpp  status.md
docs/tasks/: bigint_impl_negative.md  generic_stringify.md  generic_sum.md
docs/templates/: pyc_template.cpp
src/: CMakeLists.txt
src/numeric/: CMakeLists.txt  pyc_numeric.cpp  pyc_sum.hpp
src/types/: CMakeLists.txt  pyc_big_integer.cpp  pyc_big_integer.hpp  pyc_compare.hpp  pyc_pystring.hpp  pyc_tostring.hpp  pyc_typetraits.hpp  pyc_typetraits_17.hpp
tests/: CMakeLists.txt  test_big_integer.cpp  test_common.hpp  test_generic_stringify.cpp  test_numeric.cpp  test_stringifier.cpp  test_types.cpp
